--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     </string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_login">Login</string>
+    <string name="facebook_app_id">743081829152399</string>
+
 </resources>
