Develop branch commit with login page activity working with the new key and lauching to the Map activity on a successful login. As well as a back button fix. enter the commit message for your changes. Lines starting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     </string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_login">Login</string>
-    <string name="facebook_app_id">743081829152399</string>
+    <string name="facebook_app_id">1045486365507152</string>
+    <string name="action_settings">Settings</string>
 
 </resources>
