--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="facebook_app_id">1045486365507152</string>
     <string name="action_settings">Settings</string>
 
+    <!-- MapsActivity Strings -->
+    <string name="search_hint">Search for address...</string>
+
 </resources>
